Added support for loading shell-only dependencies